# xdist-cov-test

./: .gitignore  Containerfile  README.md  coverage.lcov  pyproject.toml  tox.ini
.config/: requirements-test.in
src/xdist_cov_test/: __init__.py  run.py
tests/: test_project.py
